include_HEADERS = \
	libmapidb.h

pkginclude_HEADERS = \
	libmapidb/codepage.h \
	libmapidb/definitions.h \
	libmapidb/error.h \
	libmapidb/extern.h \
	libmapidb/features.h \
	libmapidb/types.h

EXTRA_DIST = \
	libmapidb.h.in \
	libmapidb/definitions.h.in \
	libmapidb/features.h.in \
	libmapidb/types.h.in

DISTCLEANFILES = \
	libmapidb.h \
	libmapidb/definitions.h \
	libmapidb/features.h \
	libmapidb/types.h \
	Makefile \
	Makefile.in

