MSVSCPP_FILES = \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libmapidb/libmapidb.vcproj \
	mapidb_test_error/mapidb_test_error.vcproj \
	mapidb_test_get_version/mapidb_test_get_version.vcproj \
	libmapidb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

