MSVSCPP_FILES = \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libmapidb/libmapidb.vcproj \
	mapidb_test_database/mapidb_test_database.vcproj \
	mapidb_test_error/mapidb_test_error.vcproj \
	mapidb_test_folder/mapidb_test_folder.vcproj \
	mapidb_test_support/mapidb_test_support.vcproj \
	libmapidb.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

